<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quoridor</string>
    <string name="title_activity_quoridor">QuoridorActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Quoridor">Quoridor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movePieceBtn">Move Piece</string>
    <string name="placeWallBtn">Place Wall</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="Vertical">Vertical</string>
    <string name="Horizontal">Horizontal</string>
    <string name="title_activity_start_menu">StartMenuActivity</string>
    <string name="useAI"> Use AI </string>
    <string name="noAI"> No AI </string>
    <string name="start"> Start </string>
    <string name="NUM_PLAYERS"> NUM_PLAYERS </string>
    <string name="quit"> Quit </string>
    <string name="restart"> Restart </string>
    <string name="newGame"> New Game </string>
    <string name="movePiece"> Move Piece </string>
    <string name="placeWall"> Place Wall </string>
</resources>
