<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="com.games.jclundy.quoridor.QuoridorActivity">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="com.games.jclundy.quoridor.QuoridorActivity"
    android:orientation="vertical">
    <com.games.jclundy.quoridor.board.SquaresTableView
        android:id="@+id/squaresTable"
        android:layout_height="450dp"
        android:layout_width="450dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="0dp"/>
    <Switch
        android:layout_marginTop="0dp"
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:textOn="@string/Vertical"
        android:textOff="@string/Horizontal"
        android:layout_gravity="top"/>

    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:background="@android:color/holo_blue_bright"
            android:clickable="true"/>
        <Button
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:background="@android:color/holo_blue_bright"
            android:clickable="true"/>
        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:background="@android:color/holo_green_light"
            android:clickable="true"/>
        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:background="@android:color/holo_green_light"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>

</ScrollView>
