<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.games.jclundy.quoridor.StartMenuActivity">
    <TextView
        android:id="@+id/title"
        android:text="@string/Quoridor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <NumberPicker
        android:id="@+id/numPlayersPicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"/>

    <Switch
        android:id="@+id/aiSwitch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/useAI"
        android:textOff="@string/noAI"
        android:layout_below="@id/numPlayersPicker"/>
    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aiSwitch"
        android:text="@string/start"/>

</RelativeLayout>
