<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.games.jclundy.quoridor.board.BoardFragment">

    <com.games.jclundy.quoridor.board.SquaresTableView
        android:id="@+id/squaresTable"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    <Button
        android:id="@+id/up"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:background="@android:color/holo_blue_bright"
        android:clickable="true"/>
    <Button
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:background="@android:color/holo_blue_bright"
        android:clickable="true"/>
    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:background="@android:color/holo_green_light"
        android:clickable="true"/>
    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:background="@android:color/holo_green_light"
        android:clickable="true"/>
    </LinearLayout>
</RelativeLayout>
